--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
             <version>3.12.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.4</version>
+        </dependency>
+
         <!-- token依賴 -->
         <dependency>
             <groupId>com.auth0</groupId>
